# StreetCritic

./: .editorconfig  CHANGELOG.md  README.md
api/: Cargo.toml  README.md  config.example.toml
api/src/: account.rs  config.rs  db.rs  error.rs  main.rs  rating.rs  routing.rs  time.rs  way.rs
api/src/account/: db.rs
api/src/middleware/: auth.rs
api/src/rating/: db.rs  mod.rs
api/src/way/: db.rs  mod.rs
cli/: Cargo.toml  README.md
cli/src/: analysis.rs  commands.rs  main.rs  osm.rs  process.rs
cli/src/analysis/: bikeability.rs  indicators.rs
cli/src/analysis/bikeability/: motorized_traffic.rs  speed_limit.rs  surface.rs  way.rs
cli/src/analysis/indicators/: dooring_exposure.rs  motorized_traffic.rs  priority.rs  speed_limit.rs  surface.rs  way.rs
cli/src/db/: ways.rs
cli/src/osm/: filter.rs
database/: README.md  create.sql  import_transport_network.duckdb.sql
database/functions/: function_query_rated_segments.sql  get_stops_for_segment.sql  zxy_query.sql
database/tables/: account.sql  segment.sql  way.sql
database/views/: rated_segments.sql
frontend/: .env  .gitignore  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: style.json
frontend/src/: App.tsx  User.ts  auth.ts  config.ts  error-page.tsx  events.ts  index.html  main.tsx  notifications.ts  root.tsx  routes.ts  store.ts
frontend/src/app/: globals.css  (+1 more)
routing/: valhalla.json
streetcritic-app/: .postcssrc  tsconfig.json
streetcritic-app/src/: config.ts  main.tsx
tiles/: README.md
tiles/tilemaker/: config-indicators.json  config-openmaptiles.json  process-indicators.lua  process-openmaptiles.lua
(+206 files in other folders)
