[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bb8 = "0.8.5"
bb8-postgres = "0.8.1"
clap = { version = "4.5.17", features = ["derive"] }
geo-types = "0.7.13"
geojson = "0.24.1"
http = "1.1.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.205", features = ["derive"] }
time = { version = "0.3.36", features = ["macros", "serde"] }
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
tokio-postgres = { version = "0.7.11", features = ["with-time-0_3", "with-geo-types-0_7"] }
toml = "0.8.19"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ts-rs = "10.1.0"
